[metadata]
name = plover_paste
version = 0.0.2
description = A meta plugin for Plover which outputs the contents of the clipboard as though it was any other text
long_description = file: README.md
author = amikumanto
author_email = amikumanto@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/amikumanto/plover_paste/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev6
py_modules =
    plover_paste

[options.entry_points]
plover.meta =
    paste = plover_paste:output_clipboard
